<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Note</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="notes">Notes</string>
    <string name="title">Title</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="note">Note</string>
    <string name="create">Create</string>
</resources>
