<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorRed"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/Login_email"
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:backgroundTint="@color/colorWhite"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:textColorHint="@color/colorWhite"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/Login_password"
        android:layout_width="346dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="206dp"
        android:backgroundTint="@color/colorWhite"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName"
        android:textColorHint="@color/colorWhite"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="346dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="134dp"
        android:background="@drawable/button"
        android:text="@string/login"
        android:textColor="@color/colorWhite" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="99dp"
        android:layout_height="62dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="106dp"
        android:text="@string/notes"
        android:gravity="center"
        android:textSize="20dp"
        android:textColor="@color/colorWhite" />

</RelativeLayout>