<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorRed"
    tools:context=".RegisterActivity">

    <EditText
        android:id="@+id/Register_name"
        android:layout_width="359dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="446dp"
        android:backgroundTint="@color/colorWhite"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textColorHint="@color/colorWhite" />

    <EditText
        android:id="@+id/Register_email"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="364dp"
        android:backgroundTint="@color/colorWhite"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:textColorHint="@color/colorWhite" />

    <EditText
        android:id="@+id/Register_password"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="296dp"
        android:layout_marginStart="32dp"
        android:backgroundTint="@color/colorWhite"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName"
        android:textColorHint="@color/colorWhite" />

    <Button
        android:id="@+id/btnRegsiter"
        android:layout_width="319dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="203dp"
        android:layout_marginEnd="49dp"
        android:background="@drawable/button"
        android:text="@string/register"
        android:textColor="@color/colorWhite" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="150dp"
        android:layout_height="83dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="552dp"
        android:layout_marginStart="133dp"
        android:layout_marginTop="96dp"
        android:gravity="center"
        android:text="@string/notes"
        android:textColor="@color/colorWhite"
        android:textSize="20dp" />

</RelativeLayout>