<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewNoteActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorRed"/>

    <EditText
        android:id="@+id/note_title"
        android:layout_width="348dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="72dp"
        android:ems="10"
        android:textColorHint="@color/colorBlack"
        android:backgroundTint="@color/colorline"
        android:hint="@string/title"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/note"
        android:layout_width="344dp"
        android:layout_height="369dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="84dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/border_note"
        android:ems="1000"
        android:gravity="start"
        android:hint="@string/notes"
        android:inputType="textMultiLine"
        android:paddingEnd="15dp"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:textColorHint="@color/colorBlack"
        tools:layout_editor_absoluteX="95dp"
        tools:layout_editor_absoluteY="147dp" />

    <Button
        android:id="@+id/create_note"
        android:layout_width="356dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button"
        android:text="@string/create"
        android:textColor="@color/colorWhite" />

</RelativeLayout>